# my-raytracer

./: .gitignore  .rgignore  CMakeLists.txt  LICENSE  README.md  my-ncu.sh  mybvh.cpp  mybvh.h  mydata.h  mymesh.cpp  myplane.cpp  mytracer.cpp  mytracer_gpu.cu  mytracer_gpu.h  myutils.cpp  myutils.h  myutils_gpu.cu  myutils_gpu.h
implementation/: mymesh.cpp  myplane.cpp  mytracer.cpp  myutils.h
